--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "three": "^0.169.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
