--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +28,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
@@ -41,6 +43,7 @@
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tweakpane": "^4.0.5",
     "typescript": "^5"
   }
 }
