--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "nodemailer": "^6.9.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
@@ -32,13 +33,16 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.2",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
