--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.9.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "sharp": "^0.33.5",
