build: Update vercel config file

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
       "src": "next.config.js",
       "use": "@vercel/next"
     }
+  ],
+
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
